# hypotension_pred

./: .gitignore  OAR.create_dataset.27075365.stderr  OAR.create_dataset.27075365.stdout  README.md  launch_dataset_creation.sh  launch_explain_model.sh  launch_train_model.sh  pyproject.toml  requirements.txt
report/: bibli.bib  root.tex
report/figures/: baseline_roc.tex  data_preprocessing.tex  result.tex  roc_curve.tex
scripts/: baseline.ipynb  dataGen.py  dataLoader.py  dataset_download.py  optuna_tuning.py  pre-processing.ipynb  results_stats.ipynb  utils.py  xgboost_model.ipynb
scripts/dataset_build/: 30_s_dataset.py  30_s_dataset_reg.py  30_s_waveform_dataset.py  base_dataset.py  chu_dataset.py  signal_dataset.py
scripts/experiments/: baseline.ipynb  explain_model.py  model_for_chu.ipynb  results_stats.ipynb  show_results.ipynb  study_leading_time.ipynb  test_on_chu.ipynb  train_model.py  train_model_reg.py  xgboost_model.ipynb
scripts/illustrations/: case_selection.ipynb  compare_dataset.ipynb  explore_Mahalanobis_distance.ipynb  feature_extraction.ipynb  preprocessing.ipynb
scripts/test_haitem/: xgboost_model_bob.ipynb
scripts/test_haythem/: feature_extraction.py  test_features_extract.ipynb  test_xgboost_model.ipynb  xgboost_model_haytem.ipynb
src/hp_pred/: constants.py  data_retrieve_async.py  databuilder.py  databuilder_reg.py  dataset_download.py  experiments.py  extract_AP_waveform_features.py  handle_waveform.py  split.py  test_model.py  tracks_config.py
tests/: test_label.py
tests/test_datasetbuilder/test_basedataset/: test_label.py
