[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hp_pred"
authors = [
    { name = "Bob Aubouin--Pairault", email = "bob.aubouin-pairault@gipsa-lab.fr" },
    { name = "Mathias Réus", email = "mathias.reus@gipsa-lab.fr" },
]
description = "An hypertension predictor based on VitalDB data and ML methods."
requires-python = "~= 3.10"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
"Homepage" = "https://github.com/BobAubouin/hypotension_pred"

[tool.hatch.version]
path = "src/hp_pred/__init__.py"
