[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hp_pred"
authors = [
    { name = "Bob Aubouin--Pairault", email = "bob.aubouin-pairault@gipsa-lab.fr" },
    { name = "Mathias Réus", email = "mathias.reus@gipsa-lab.fr" },
]
description = "An hypertension predictor based on VitalDB data and ML methods."
dependencies = [
    "vitaldb==1.4.7",
    "numpy==1.26",
    "pandas==2.1.3",
    "matplotlib==3.8.2",
    "tqdm==4.66.1",
    "aiohttp==3.9.3",
]
optional-dependencies = { "dev" = ["pytest==8.0.0", "black==24.2.0"] }
requires-python = "~= 3.10"
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
"Homepage" = "https://github.com/BobAubouin/hypotension_pred"

[tool.hatch.version]
path = "src/hp_pred/__init__.py"

[tool.black]
line-length = 88
target-version = ['py310']
